# M2IDI_USB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MIDIBUS_USB/: Audio_driver.cpp  DMA_driver.cpp  I2S_driver.cpp  I2S_driver.h  MIDIBUS_USB.cppproj  MIDI_Config.h  main.cpp  tusb_config.h  usb_descriptors.h
MIDIBUS_USB/src/ASF/sam0/utils/cmsis/samd21/source/gcc/: startup_samd21.c
legacy/: Audio_driver.cpp  DMA_driver.cpp  I2S_driver.cpp  main.cpp
lib/: CMakeLists.txt
src/: MIDI_Config.h  RingBuffer.h  audio_driver.cpp  audio_driver.h  board_m2idi_usb.h  i2s.c  i2s.cpp  i2s.h  i2s.pio  main.cpp  tusb_config.h  usb.cpp  usb.h  usb_descriptors.c  usb_descriptors.h
